# Stern-project

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
deploy/: Dockerfile  bootstrap_vm.sh  crypto-mm.service  nginx.conf
docs/: CONFIDENTIALITY_BOUNDARY.md  DEPLOY_DUCKDNS.md  TECHNICAL_HANDOFF.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  AppV2.tsx  index.css  main.tsx  types.ts
frontend/src/components/: AnalyticsPanel.tsx  AnomaliesPanel.tsx  BentoCard.tsx  CalibrationPanel.tsx  CandlestickChart.tsx  Checklist.tsx  Cockpit.tsx  DataQualityPanel.tsx  DataTable.tsx  DatabaseAudit.tsx  DatabasePanelCanonical.tsx  DatabasePanelV2.tsx  DecisionPanel.tsx  DepthChart.tsx  DeskBanner.tsx  DevPanel.tsx  EdgeScatter.tsx  EmergencyPanel.tsx  EquityCurveChart.tsx  ErrorBoundary.tsx  ExecutionPanel.tsx  ExportDesk.tsx  FillsPanel.tsx  FunnelCard.tsx  GlassPanel.tsx  GlobalStatusStrip.tsx  HeaderControls.tsx  IBAccountPanel.tsx  InvalidContextScreen.tsx  LatencyPanel.tsx  LineChart.tsx  LogsPanel.tsx  MagicBento.tsx  MarketMakerPanel.tsx  MarketProfileCanonical.tsx  MetricCard.tsx  OrderBookPanel.tsx  PNLPanel.tsx  PerformancePanel.tsx  PlotCard.tsx  (+47 more)
frontend/src/lib/: ApexChart.tsx  api.ts  (+54 more)
scripts/: check_before_push.sh
src/crypto_mm/: __init__.py  main.py
src/crypto_trading_desk_intern.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_market_maker.py  test_marketdata_service.py  test_portfolio.py  test_spread.py
(+119 files in other folders)
